fixed problems in the story editor and added integration to organization model