@@ -28,7 +28,20 @@
 			<email>cvgaviao@gmail.com</email>
 			<timezone>-3</timezone>
 		</developer>
+		<developer>
+			<id>florianpirchner</id>
+			<name>Florian Pirchner</name>
+			<email>florian.pirchner@gmail.com</email>
+			<timezone>+2</timezone>
+		</developer>
+		<developer>
+			<id>haglo</id>
+			<name>Hans-George Glockler</name>
+			<email>hans-georg.gloeckler@uni-ulm.de</email>
+			<timezone>+2</timezone>
+		</developer>
 	</developers>
+
 	<profiles>
 		<profile>
 			<id>prepare-for-next-release</id>
@@ -66,28 +79,33 @@
 				<defaultGoal>verify</defaultGoal>
 			</build>
 			<modules>
-				<module>org.lunifera.p2.repo.juno</module>
-				<module>org.lunifera.feature.metamodel</module>
-				<module>org.lunifera.metamodel.behavior</module>
-				<module>org.lunifera.metamodel.behavior.edit</module>
-				<module>org.lunifera.metamodel.bprocess</module>
-				<module>org.lunifera.metamodel.bprocess.edit</module>
-				<module>org.lunifera.metamodel.brule</module>
-				<module>org.lunifera.metamodel.brule.edit</module>
-				<module>org.lunifera.metamodel.common</module>
-				<module>org.lunifera.metamodel.common.edit</module>
-				<module>org.lunifera.metamodel.entity</module>
-				<module>org.lunifera.metamodel.entity.edit</module>
-				<module>org.lunifera.metamodel.knowledge</module>
-				<module>org.lunifera.metamodel.knowledge.edit</module>
-				<module>org.lunifera.metamodel.knowledge.editor</module>
-				<module>org.lunifera.metamodel.organization</module>
-				<module>org.lunifera.metamodel.organization.edit</module>
-				<module>org.lunifera.metamodel.software</module>				
-				<module>org.lunifera.metamodel.software.edit</module>
-				
-				<module>org.lunifera.feature.ide</module>
-				<module>org.lunifera.ide.product</module>				
+				<!-- <module>org.lunifera.p2.repo.juno</module> -->
+				<!-- <module>org.lunifera.feature.metamodel</module> -->
+<!-- 				<module>org.lunifera.metamodel.behavior</module> -->
+				<!-- <module>org.lunifera.metamodel.behavior.edit</module> -->
+				<!-- <module>org.lunifera.metamodel.bprocess</module> -->
+				<!-- <module>org.lunifera.metamodel.bprocess.edit</module> -->
+				<!-- <module>org.lunifera.metamodel.brule</module> -->
+				<!-- <module>org.lunifera.metamodel.brule.edit</module> -->
+<!-- 				<module>org.lunifera.metamodel.common</module> -->
+				<!-- <module>org.lunifera.metamodel.common.edit</module> -->
+				<!-- <module>org.lunifera.metamodel.entity</module> -->
+				<!-- <module>org.lunifera.metamodel.entity.edit</module> -->
+				<!-- <module>org.lunifera.metamodel.knowledge</module> -->
+				<!-- <module>org.lunifera.metamodel.knowledge.edit</module> -->
+				<!-- <module>org.lunifera.metamodel.knowledge.editor</module> -->
+<!-- 				<module>org.lunifera.metamodel.organization</module> -->
+				<!-- <module>org.lunifera.metamodel.organization.edit</module> -->
+				<!-- <module>org.lunifera.metamodel.software</module> -->
+				<!-- <module>org.lunifera.metamodel.software.edit</module> -->
+<!-- 				<module>org.lunifera.metamodel.dsl.common</module> -->
+<!-- 				<module>org.lunifera.metamodel.dsl.common.ui</module> -->
+				<module>org.lunifera.metamodel.dsl.behavior.stories.en</module>
+				<module>org.lunifera.metamodel.dsl.behavior.stories.en.tests</module>
+				<module>org.lunifera.metamodel.dsl.behavior.stories.en.ui</module>
+				<module>org.lunifera.metamodel.dsl.organization.en</module>
+				<module>org.lunifera.metamodel.dsl.organization.en.tests</module>
+				<module>org.lunifera.metamodel.dsl.organization.en.ui</module>
 			</modules>
 		</profile>
 		<profile>
@@ -115,17 +133,18 @@
 				<module>org.lunifera.metamodel.knowledge.editor</module>
 				<module>org.lunifera.metamodel.organization</module>
 				<module>org.lunifera.metamodel.organization.edit</module>
-				<module>org.lunifera.metamodel.software</module>				
+				<module>org.lunifera.metamodel.software</module>
 				<module>org.lunifera.metamodel.software.edit</module>
-				
+
 				<module>org.lunifera.feature.ide</module>
-				<module>org.lunifera.ide.product</module>				
+				<module>org.lunifera.ide.product</module>
 			</modules>
 		</profile>
 		<profile>
 			<id>target</id>
-			<!-- This profile was create just to be able to import target project into the IDE and provide ways to setup the workspace 
-				using m2e import, since the tycho buil is using p2 repos instead targets. -->
+			<!-- This profile was create just to be able to import target project 
+				into the IDE and provide ways to setup the workspace using m2e import, since 
+				the tycho buil is using p2 repos instead targets. -->
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
@@ -133,7 +152,41 @@
 				<module>org.lunifera.p2.target.juno</module>
 			</modules>
 		</profile>
-
+<!-- 		<profile> -->
+<!-- 			<id>skip-ui-tests</id> -->
+<!-- 			<activation> -->
+<!-- 				<property> -->
+<!-- 					<name>skip-ui-tests</name> -->
+<!-- 				</property> -->
+<!-- 			</activation> -->
+<!-- 			<properties> -->
+<!-- 				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest> -->
+<!-- 			</properties> -->
+<!-- 		</profile> -->
+<!-- 		<profile> -->
+<!-- 			<id>macosx</id> -->
+<!-- 			<activation> -->
+<!-- 				<os> -->
+<!-- 					<name>mac os x</name> -->
+<!-- 					<family>mac</family> -->
+<!-- 				</os> -->
+<!-- 			</activation> -->
+<!-- 			<properties> -->
+<!-- 				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs> -->
+<!-- 			</properties> -->
+<!-- 		</profile> -->
+<!-- 		<profile> -->
+<!-- 			<id>other-os</id> -->
+<!-- 			<activation> -->
+<!-- 				<os> -->
+<!-- 					<name>not-mac</name> -->
+<!-- 					<family>!mac</family> -->
+<!-- 				</os> -->
+<!-- 			</activation> -->
+<!-- 			<properties> -->
+<!-- 				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs> -->
+<!-- 			</properties> -->
+<!-- 		</profile> -->
 	</profiles>
 
 
@@ -173,7 +226,33 @@
 		</repository>
 	</repositories>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>fornax</id>
+			<url>http://www.fornax-platform.org/m2/repository</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+		<!-- <pluginRepository> -->
+		<!-- <id>fornax-snapshots</id> -->
+		<!-- <url>http://www.fornax-platform.org/archiva/repository/snapshots/</url> -->
+		<!-- <snapshots> -->
+		<!-- <enabled>true</enabled> -->
+		<!-- </snapshots> -->
+		<!-- </pluginRepository> -->
+		<pluginRepository>
+			<id>xtend</id>
+			<url>http://build.eclipse.org/common/xtend/maven</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<build>
+		<sourceDirectory>src</sourceDirectory>
+
 		<resources>
 			<resource>
 				<directory>./</directory>
@@ -230,6 +309,7 @@
 					<artifactId>tycho-compiler-plugin</artifactId>
 					<version>${tycho-version}</version>
 					<configuration>
+						<compilerVersion>1.6</compilerVersion>
 						<encoding>UTF-8</encoding>
 						<source>1.6</source>
 						<target>1.6</target>
@@ -252,9 +332,29 @@
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<failIfNoTests>false</failIfNoTests>
+
+					</configuration>
+				</plugin>
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.fornax.toolsupport</groupId> -->
+<!-- 					<artifactId>fornax-oaw-m2-plugin</artifactId> -->
+<!-- 					<version>3.4.0</version> -->
+<!-- 					<configuration> -->
+<!-- 						<workflowEngine>mwe2</workflowEngine> -->
+<!-- 					</configuration> -->
+<!-- 				</plugin> -->
 			</plugins>
 		</pluginManagement>
 	</build>
+
+
+
 	<organization>
 		<name>Lunifera.org</name>
 		<url>www.lunifera.org</url>
